feat(shwotime): Implementada capa de negocio en el servicio de funciones y endpoints, asi como seguridad para cada endpoint
